--- a/router-config/openwrt-master/config
+++ b/router-config/openwrt-master/config
@@ -4738,6 +4738,8 @@ CONFIG_PACKAGE_luci-mod-system=y
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
 # CONFIG_PACKAGE_luci-app-ahcp is not set
 CONFIG_PACKAGE_luci-app-amlogic=y
+CONFIG_PACKAGE_istore=y
+CONFIG_PACKAGE_luci-app-store=y
 # CONFIG_PACKAGE_luci-app-apinger is not set
 # CONFIG_PACKAGE_luci-app-aria2 is not set
 CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
