--- a/router-config/lede-master/config
+++ b/router-config/lede-master/config
@@ -601,7 +601,7 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 # LuCI-theme:
 # CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
-CONFIG_PACKAGE_luci-theme-material is not set
+#CONFIG_PACKAGE_luci-theme-material is not set
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 
