--- a/router-config/lede-master/config
+++ b/router-config/lede-master/config
@@ -26,8 +26,10 @@ CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
 # CONFIG_TARGET_ROOTFS_CPIOGZ is not set
 CONFIG_TARGET_ROOTFS_TARGZ=y
-# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+# CONFIG_TARGET_ROOTFS_EXT4FSis not set
+CONFIG_TARGET_ROOTFS_EXT4FS=y
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 # CONFIG_TARGET_IMAGES_GZIP is not set
