--- a/router-config/lede-master/config
+++ b/router-config/lede-master/config
@@ -33,6 +33,7 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 # CONFIG_TARGET_IMAGES_GZIP is not set
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
 # National language packs, luci-i18n-base:
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
