--- a/router-config/lede-master/config
+++ b/router-config/lede-master/config
@@ -458,6 +458,7 @@ CONFIG_PACKAGE_luci-app-adbyby-plus=y
 # CONFIG_PACKAGE_luci-app-aliyundrive-fuse is not set
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
 CONFIG_PACKAGE_luci-app-amlogic=y
+CONFIG_PACKAGE_luci-app-istorex=y
 CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_linkease=y
 CONFIG_PACKAGE_luci-app-linkease=y
